--- a/templates/add_recipe.html
+++ b/templates/add_recipe.html
@@ -1,119 +1,118 @@
 {% extends 'base.html' %}
-{% block content %}
+{% block add_recipe %}
 
-<div class="add-recipe col-lg-6 offset-lg-4">
-
-    <div class="text-center">
-        <h2>Add a Recipe!</h2>
-        <p>Please fill in the form to add a recipe</p>
-    </div>
-
-    <div class="card shadow">
-        <div class="card-body">
-            <form action="{{url_for('insert_recipe')}}" method="POST" class="add-recipe-form">
-            
-                <div class="col-10 mt-3 mb-5">
-                    <!-- Recipe Title -->
-                    <div class="mt-3 md-form form-lg">
-                        <label for="recipe_name" class="label">Recipe name</label>
-                        <input type="text" id="title" name="recipe_name" value="" required class="form-control" placeholder="e.g. Pasta carbonara">
-                    </div>
-
-                    <!-- Recipe Description -->
-                    <div class="mt-5 md-form form-lg">
-                        <label for="recipe_description" class="label">Recipe description</label>
-                        <input type="text" id="description" name="recipe_description" value="" class="form-control" placeholder="e.g. Creamy pasta with bacon, spring onions and parmesan cheese">
-                    </div>
-                </div>
-
-                <div class="input-field col-10 mb-5">
-                    <div class="flex-selection">
-
-                        <!-- Dish Type -->
-                        <div class="input-field col-lg-2 col-sm-4 mr-3 mobile-style">
-                            <label for="dish_type" class="label">Dish type</label>
-                            <select class="form-control" id="type" name="dish_type" required>
-                                {% for cat in Categories %}
-                                <option value="{{cat.dish_type}}">{{cat.dish_type}}</option>
-                                {% endfor %}
-                                </select>
+    <div class="add-recipe col-lg-6 offset-lg-4">
+    
+        <div class="text-center">
+            <h2>Add a Recipe!</h2>
+            <p>Please fill in the form to add a recipe</p>
+        </div>
+        
+        <!-- Recipe Card -->
+        <div class="card shadow">
+            <div class="card-body">
+                <form action="{{url_for('insert_recipe')}}" method="POST" class="add-recipe-form">
+                    
+                    <div class="col-10 mt-3 mb-5">
+                        <!-- Recipe Title -->
+                        <div class="mt-3 md-form form-lg">
+                            <label for="recipe_name" class="label">Recipe name</label>
+                            <input type="text" id="title" name="recipe_name" value="" required class="form-control" placeholder="e.g. Pasta carbonara">
                         </div>
-
-                        <!-- Servings -->
-                        <div class="input-field col-lg-1 col-sm-4 mr-3 mobile-style">
-                            <label for="recipe_serving" class="label">Serves</label>
-                            <input type="text" name="serves" id="recipe_serving" required class="form-control" min="1" placeholder="2">
-                        </div>
-
-                        <!-- Preparation Time -->
-                        <div class="input-field col-lg-2 col-sm-4 mr-3 mobile-style">
-                            <label for="preparation_time" class="label">Prep time</label>
-                            <input type="text" name="prep-time" id="preparation_time" required class="form-control" placeholder="e.g. 10 miuntes">
-                        </div>
-
-                        <!-- Cooking Time -->
-                        <div class="input-field col-lg-2 col-sm-4 mr-3 mobile-style">
-                            <label for="cooking_time" class="label">Cooking time</label>
-                            <input type="text" name="cooking-time" id="cooking_time" required class="form-control" placeholder="e.g. 20 miuntes">
-                        </div>
-
-                        <!-- Difficulty level -->
-                        <div class="input-field col-lg-2 col-sm-4 mobile-style">
-                            <label for="recipe_difficulty" class="label">Level</label>
-                            <select class="form-control" id="difficulty" name="recipe_difficulty" required>
-                                {% for diff in difficulty %}
-                                <option value="{{diff.recipe_difficulty}}">{{diff.recipe_difficulty}}</option>
-                                {% endfor %}    
-                                </select>
-                        </div>
-
+    
+                        <!-- Recipe Description -->
+                        <div class="mt-5 md-form form-lg">
+                            <label for="recipe_description" class="label">Recipe description</label>
+                            <input type="text" id="description" name="recipe_description" value="" class="form-control" placeholder="e.g. Creamy pasta with bacon, spring onions and parmesan cheese">
                         </div>
                     </div>
-
-                    <!-- Recipe Ingredients -->
-                    <div class="col-10 btn-inline mb-5" id="TextBoxGroupIngredients">
-                        <div id="TextBoxIngredientDiv">
-                            <label for="recipe_ingredients" class="label">Ingredients</label>
-                            <input type="text" id="ingredient" name="recipe_ingredients" value="" required class="form-control" placeholder="e.g. 2 medium chopped onions">
-                                <div class="row">
-                                <a class="btn btn-sm" id="addIngredient" role="button"><i class="fas fa-plus" aria-hidden="true"></i></a>
-                                <a class="btn btn-sm removeIngredientDiv" id="removeIngredient" role="button"><i class="fas fa-minus" aria-hidden="true"></i></a>
+    
+                    <div class="input-field col-10 mb-5">
+                        <div class="flex-selection">
+    
+                            <!-- Dish Type -->
+                            <div class="input-field col-lg-2 col-sm-4 mr-3 mobile-style">
+                                <label for="dish_type" class="label">Dish type</label>
+                                <select class="form-control" id="type" name="dish_type" required>
+                                    {% for cat in Categories %}
+                                    <option value="{{cat.dish_type}}">{{cat.dish_type}}</option>
+                                    {% endfor %}
+                                    </select>
+                            </div>
+    
+                            <!-- Servings -->
+                            <div class="input-field col-lg-1 col-sm-4 mr-3 mobile-style">
+                                <label for="recipe_serving" class="label">Serves</label>
+                                <input type="text" name="recipe_serving" id="recipe_serving" required class="form-control" placeholder="2">
+                            </div>
+    
+                            <!-- Preparation Time -->
+                            <div class="input-field col-lg-2 col-sm-4 mr-3 mobile-style">
+                                <label for="preparation_time" class="label">Prep time</label>
+                                <input type="text" name="preparation_time" id="preparation_time" required class="form-control" placeholder="e.g. 10 miuntes">
+                            </div>
+    
+                            <!-- Cooking Time -->
+                            <div class="input-field col-lg-2 col-sm-4 mr-3 mobile-style">
+                                <label for="cooking_time" class="label">Cooking time</label>
+                                <input type="text" name="cooking_time" id="cooking_time" required class="form-control" placeholder="e.g. 20 miuntes">
+                            </div>
+    
+                            <!-- Difficulty level -->
+                            <div class="input-field col-lg-2 col-sm-4 mobile-style">
+                                <label for="recipe_difficulty" class="label">Level</label>
+                                <select class="form-control" id="difficulty" name="recipe_difficulty" required>
+                                    {% for diff in difficulty %}
+                                    <option value="{{diff.recipe_difficulty}}">{{diff.recipe_difficulty}}</option>
+                                    {% endfor %}    
+                                    </select>
+                            </div>
+    
+                            </div>
+                        </div>
+    
+                        <!-- Recipe Ingredients -->
+                        <div class="col-10 btn-inline mb-5" id="TextBoxGroupIngredients">
+                            <div id="TextBoxIngredientDiv">
+                                <label for="recipe_ingredients" class="label">Ingredients</label>
+                                <input type="text" id="ingredient" name="recipe_ingredients" value="" required class="form-control" placeholder="e.g. 2 medium chopped onions">
+                                    <div class="row">
+                                    <a class="btn btn-sm" id="addIngredient" role="button"><i class="fas fa-plus" aria-hidden="true"></i></a>
+                                    <a class="btn btn-sm removeIngredientDiv" id="removeIngredient" role="button"><i class="fas fa-minus" aria-hidden="true"></i></a>
+                                    </div>
+                            </div>
+                        </div>
+    
+                        <!-- Recipe Instructions -->
+                        <div class="col-10 mb-5 instr" id="TextBoxGroupInstructions">
+                            <div id="TextBoxInstructionDiv">
+                                <label for="recipe_instruction" class="label">Instruction</label>
+                                <textarea class="form-control text-instr" id="recipe_instruction" name="recipe_instruction" type="text" placeholder="e.g. In a hot pan combine oil, onion and pepper and cook for 5 miuntes."></textarea>
+                                    <div class="row">
+                                    <a class="btn btn-sm" id="addInstruction" role="button"><i class="fas fa-plus" aria-hidden="true"></i></a>
+                                    <a class="btn btn-sm removeInstructionDiv" id="removeInstruction" role="button"><i class="fas fa-minus" aria-hidden="true"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        
+                        <!-- Upload Image for recipe -->
+                        <div class="mb-5 col-8">
+                            <img src="https://www.industriehof.com/images/social/xing-24x24.png" id="img-preview" alt="preview-img"/>
+                                <div class="custom-file">
+                                <input type="file" class="custom-file-input" id="image-upload">
+                                <label class="custom-file-label" for="recipe_image">Choose image</label>
                                 </div>
                         </div>
-                    </div>
-
-                    <!-- Recipe Instructions -->
-                    <div class="col-10 mb-5 instr" id="TextBoxGroupInstructions">
-                        <div id="TextBoxInstructionDiv">
-                            <label for="recipe_instruction" class="label">Instruction</label>
-                            <textarea class="form-control text-instr" id="recipe_instruction" name="recipe_instruction" type="text" placeholder="e.g. In a hot pan combine oil, onion and pepper and cook for 5 miuntes."></textarea>
-                                <div class="row">
-                                <a class="btn btn-sm" id="addInstruction" role="button"><i class="fas fa-plus" aria-hidden="true"></i></a>
-                                <a class="btn btn-sm removeInstructionDiv" id="removeInstruction" role="button"><i class="fas fa-minus" aria-hidden="true"></i></a>
-                            </div>
+    
+                        <!-- Submit Recipe -->
+                        <div class="submit-btns col-12">
+                            <input class="btn btn-primary submit-btn" type="submit" value="Submit" id="submit">
+                            <a class="btn btn-primary cancel-btn" role="button" href="{{url_for('all_recipes')}}">Cancel</a>
                         </div>
-                    </div>
-                    
-                    <!-- Upload Image for recipe -->
-                    <div class="mb-5 col-8">
-                        <img src="https://www.industriehof.com/images/social/xing-24x24.png" id="img-preview"/>
-                            <div class="custom-file">
-                            <input type="file" class="custom-file-input" id="image-upload">
-                            <label class="custom-file-label" for="recipe_image">Choose image</label>
-                            </div>
-                    </div>
-
-                    <!-- Submit Recipe -->
-                    <div class="submit-btns col-12">
-                        <input class="btn btn-primary submit-btn" type="submit" value="Submit" id="submit">
-                        <a class="btn btn-primary cancel-btn" role="button" href="{{url_for('all_recipes')}}">Cancel</a>
-                    </div>
-            
-            </form>
+                
+                </form>
+            </div>
         </div>
     </div>
-</div>
-
-
 
 {% endblock %}
