--- a/templates/search_result.html
+++ b/templates/search_result.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
-{% block content %}
+{% block search_result %}
 
-<div class="search-result col-md-12 col-lg-10 offset-lg-3">
+<div class="search-result col-md-12 col-lg-9 offset-lg-3">
   <div class="result-header">
     <h3>Search Results</h3>
     <!-- Search form -->
@@ -10,72 +10,39 @@
       <input class="form-control form-control-sm ml-3 w-75" type="text" name="search_text" placeholder="Search" aria-label="Search" required>
     </form>
   </div>
+</div>
 
 
+ <!-- Recipe Cards -->
+<div class="all-recipes col-lg-10 offset-lg-2">
 
- <!-- Card deck -->
-  <div class="card-deck search-deck">
-
-    <!-- Card -->
-    {% for recipe in recipes %}
-    <div class="card search-card mb-5 col-md-3">
-      
-      <!--Card image-->
-      <div class="view overlay">
-        <img class="card-img-top" src="{{recipe.recipe_image}}" alt="Card image cap">
-      </div>
-      
-      <!--Card content-->
-      <div class="card-body">
-        <!--Title-->
-        <h5 class="card-title text-center">{{recipe.recipe_name}}</h5>
-
-        <hr>
-        
-        <!-- Recipe details-->
-        <ul class="browser-recipe-icons list-unstyled">
-          <li class="fav-details-list"><i class="fas fa-user "></i><span>{{recipe.dish_type}}</span></li>
-          <li class="fav-details-list"><i class="fas fa-clock "></i><span>{{recipe.preparation_time}}</span></li>
-          <li class="fav-details-list"><i class="fas fa-stopwatch "></i><span>{{recipe.cooking_time}}</span></li>
-          <li class="fav-details-list"><i class="fas fa-signal "></i><span>{{recipe.recipe_difficulty}}</span></li>
-        </ul>
-
+<section class="all-cards">
+  {% for recipe in recipes %}
+  <div class="card-container">
+    <div class="recipe">
+        <div class="recipe-image">
+          <img src="{{recipe.recipe_image}}" alt="recipe-image">
+        </div>
+        <div class="description">
+          <h5 class="text-center pt-2">{{recipe.recipe_name}}</h5>
+          <hr>
+          <!-- Recipe details-->
+          <ul class="browser-recipe-icons list-unstyled">
+            <li class="fav-details-list"><i class="fas fa-user"></i><span>{{recipe.dish_type}}</span></li>
+            <li class="fav-details-list"><i class="fas fa-clock"></i><span>{{recipe.preparation_time}}</span></li>
+            <li class="fav-details-list"><i class="fas fa-stopwatch"></i><span>{{recipe.cooking_time}}</span></li>
+            <li class="fav-details-list"><i class="fas fa-signal"></i><span>{{recipe.recipe_difficulty}}</span></li>
+          </ul>
+        </div>
         <!-- View Single Recipe -->
         <div class="submit-btns col-12">
-          <a class="btn btn-primary view-btn" role="button" href="{{url_for('single_recipe', recipe_id=recipe.id)}}">View Recipe</a>
+          <a class="btn btn-primary view-btn" role="button" href="{{url_for('single_recipe', recipe_id=recipe._id)}}">View Recipe</a>
         </div>
-        
-      </div>
     </div>
-
-    {% endfor %}
-
-  </div> 
-  
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+  </div>
+  {% endfor %}
+</section>  
+</div>
   
 </div>
 
