--- a/templates/all_recipes.html
+++ b/templates/all_recipes.html
@@ -14,7 +14,7 @@
     <div class="card-home text-center">
       <h5>Search for a recipe</h5>
       <!-- Search form -->
-      <form class="form-inline md-form form-sm mt-0" action="{{url_for('search_bar')}}" method="POST">
+      <form class="form-inline md-form form-sm mt-0 pl-5" action="{{url_for('search_bar')}}" method="POST">
         <i class="fas fa-search" aria-hidden="true" for="submit-form"></i>
         <input class="form-control form-control-sm ml-3 w-75" type="text" name="search_text" placeholder="Search" aria-label="Search" required>
       </form>
