--- a/templates/base.html
+++ b/templates/base.html
@@ -28,19 +28,32 @@
 			</button>
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav">
-							<li class="nav-item">
-								<a class="nav-link" href="{{url_for('browser_recipes')}}">Browser</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="{{url_for('add_recipe')}}">Add Recipe</a>
-							</li>
+						<li class="nav-item">
+							<a class="nav-link" href="{{url_for('home_page')}}">Home</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="{{url_for('all_recipes')}}">View All</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="{{url_for('add_recipe')}}">Add Recipe</a>
+						</li>
+						<!-- Search form -->
+					      <form class="form-inline md-form form-sm mt-0" action="{{url_for('search_bar')}}" method="POST">
+					      <input class="form-control form-control-sm ml-3 w-75" type="text" name="search_text" placeholder="Search" aria-label="Search" required>
+					      </form>
 					</ul>
 				</div>
 			</nav>
 		</header>
 
         <main>
-        {% block content %} {% endblock %}
+        {% block home_page %} {% endblock %}
+        {% block view_all %} {% endblock %}
+        {% block search_recipe %} {% endblock %}
+        {% block search_result %} {% endblock %}
+        {% block single_recipe %} {% endblock %}
+        {% block edit_recipe %} {% endblock %}
+        {% block add_recipe %} {% endblock %}
         </main>
 
 		<!-- Footer -->						
